hint can be switched off by setting offset to 0

--- a/app/locale/de_DE/Gfe_CartHint.csv
+++ b/app/locale/de_DE/Gfe_CartHint.csv
@@ -2,3 +2,4 @@
 "Shipping is free for you!","Für Ihre Bestellung fallen keine Versandkosten an!"
 "Cart hints","Hinweise im Warenkorb"
 "Offset for free shipping","Grenze für Versandkostenbefreiung"
+"Set to 0 to disable this feature!","Einfach auf 0 setzen, um die Anzeige des Hinweises auszuschalten!"
